# online-course-completion

./: README.md  course_completion_model.ipynb  pyproject.toml  train_model.py
.ipynb_checkpoints/: course_completion_model-checkpoint.ipynb
models/: random_forest.pkl
notebooks/: 01_data_loading_and_exploration.ipynb  02_preprocessing.ipynb  README.md  course_completion_model.ipynb
notebooks/.ipynb_checkpoints/: 01_data_loading_and_exploration-checkpoint.ipynb  02_preprocessing-checkpoint.ipynb  course_completion_model-checkpoint.ipynb
