[project]
name = "course-completion-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammed Hasnaine",email = "mohammedhasnaine2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=1.5.3,<2.0.0)",
    "numpy (>=1.24.4,<2.0.0)",
    "scikit-learn (>=1.2.2,<2.0.0)",
    "matplotlib (>=3.7.1,<4.0.0)",
    "seaborn (>=0.12.2,<0.13.0)",
    "jupyter (>=1.0.0,<2.0.0)",
    "xgboost (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
